# counter_mvc

./: CMakeLists.txt  README.md  docker-compose.yaml
services/: CMakeLists.txt
services/counter/: CMakeLists.txt  main.c
services/counter/controller/: controller.c  controller.h
services/counter/controller/dto/: counter_output.c  counter_output.h
services/counter/controller/provider/: counter_json.c  counter_json.h
services/counter/domain/: counter.c  counter.h
services/display/: CMakeLists.txt  main.c
services/display/controller/: controller.c  controller.h
services/display/controller/dto/: counter_input.c  counter_input.h
services/display/controller/provider/: counter_json.c  counter_json.h
services/display/domain/model/: counter.c  counter.h
services/display/domain/repository/: counter_repository.c  counter_repository.h
services/display/presenter/: presenter.c  presenter.h
services/display/presenter/dto/: counter_representation.c  counter_representation.h
services/display/presenter/view/: cli.c  cli.h
