cmake_minimum_required(VERSION 3.7.0)
project (counter_mvc)

set (CMAKE_C_FLAGS "-D_GNU_SOURCE -Wall -std=c99")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
set (CMAKE_BUILD_TYPE Debug)

add_executable (counter_mvc "")
target_link_libraries (counter_mvc PUBLIC sat)

target_sources (counter_mvc
  PUBLIC
  ${CMAKE_CURRENT_LIST_DIR}/src/application.c
  ${CMAKE_CURRENT_LIST_DIR}/src/main.c
)

target_include_directories (counter_mvc
  PUBLIC
  ${CMAKE_CURRENT_LIST_DIR}/include
)

install (TARGETS counter_mvc DESTINATION bin)